# ReviewOutliers

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/models/: main_category_encoder.pkl  model_outlier.pkl  standardizer.pkl  store_encoder.pkl  verified_purchase_encoder.pkl
data/output/: metadata_profiling.html  review_profiling.html
data/processed/: df_test_encoded.parquet  df_test_enriched.parquet  df_train_encoded.parquet  test.parquet  train.parquet
data/raw/: Subscription_Boxes_metadata.json
docs/: outliers.md  shift.md
notebooks/: 00_data_download.ipynb  00_data_download_datasets.ipynb  00_data_download_native.ipynb  01_data_exploration.ipynb  01_data_exploration_auto.ipynb  01_data_merge_and_splitting.ipynb  02_data_exploration.ipynb  02_data_merge_and_splitting.ipynb  02_feature_engineering.ipynb  03_clean_enrich_encode.ipynb  03_data_splitting.ipynb  03_outlier_and_shift.ipynb  03_outlier_detection.ipynb  04_model_serving.ipynb  04_outlier_and_shift.ipynb  05_model_serving.ipynb
src/: app.py  config.py
src/api/: distribution_shift.py  outlier_detection.py  reviews.py  utils.py
src/tasks/: data_drift.py  distribution_shift.py  outliers.py  outliers_and_shift.py
src/utils/: distribution_shift.py  download.py  io.py  preprocessing_cleaning.py  preprocessing_encoding.py
src/utils/io/: download.py  io.py  load_data_dask.py  load_data_pyarrow.py
src/utils/maths/: divergence_metrics.py
src/utils/preprocessing/: duplicates.py  preprocessing.py  preprocessing_cleaning copy.py  preprocessing_cleaning.py  preprocessing_encoding.py
tests/unitary/: test_data_processing.py  test_distribution_shift.py  test_outlier_detection.py
