[tool.poetry]
name = "reviewoutliers"
version = "0.1.0"
description = "A project for detecting outliers in Amazon reviews"
authors = ["Alexis Ravanel <some@mail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12.2"
# Add your project dependencies here
# e.g., numpy = "^1.21.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pytest = "^8.2.2"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
ruff = "^0.5.0"

[tool.poetry.group.dev.dependencies]
docker = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 124
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
)/
'''

[tool.ruff]
select = ["E", "F"]
ignore = ["E741"]
