[tool.poetry]
name = "reviewoutliers"
version = "0.1.0"
description = "A project for detecting outliers in Amazon reviews"
authors = ["Alexis Ravanel <some@mail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.12.2"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pytest = "^8.2.2"
pygwalker = "^0.4.9.1"
ydata-profiling = "^4.9.0"
tqdm = "^4.66.4"
black = {extras = ["jupyter"], version = "^24.4.2"}
sentence-transformers = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
ruff = "^0.5.0"

[tool.poetry.group.dev.dependencies]
docker = "^7.1.0"
jupyter-black = "^0.3.4"
pyod = "^2.0.1"
seaborn = "^0.13.2"
datasets = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 124
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
)/
'''

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E741"]

[tool.ruff]
line-length = 124 
